// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseSeverity renders as expected 1`] = `
<ul class="vue--severity">
  <!---->
  <!---->
  <li class="vue--severity__item vue--severity__item--high">
    <div class="vue--severity__count"><span data-snyk-test="Base Severity: high count" class="vue--severity__label">4</span></div> <abbr title="High severity issues" class="vue--severity__text">
      <vulnicon-stub title="Vuln Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></vulnicon-stub> <span class="vue--severity__label">H</span>
    </abbr>
  </li>
  <li class="vue--severity__item vue--severity__item--high">
    <div class="vue--severity__count"><span class="vue--severity__label">2</span></div> <abbr title="High severity license issues" class="vue--severity__text">
      <licenseicon-stub title="License Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></licenseicon-stub> <span class="vue--severity__label">H</span>
    </abbr>
  </li>
  <li data-snyk-ignore-wcag2aa="true" class="vue--severity__item vue--severity__item--none">
    <div class="vue--severity__count"><span data-snyk-test="Base Severity: medium count" class="vue--severity__label">0</span></div> <abbr title="Medium severity issues" class="vue--severity__text">
      <vulnicon-stub title="Vuln Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></vulnicon-stub> <span class="vue--severity__label">M</span>
    </abbr>
  </li>
  <li data-snyk-ignore-wcag2aa="true" class="vue--severity__item vue--severity__item--medium">
    <div class="vue--severity__count"><span class="vue--severity__label">1</span></div> <abbr title="Medium severity license issues" class="vue--severity__text">
      <licenseicon-stub title="License Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></licenseicon-stub> <span class="vue--severity__label">M</span>
    </abbr>
  </li>
  <li class="vue--severity__item vue--severity__item--low">
    <div class="vue--severity__count"><span data-snyk-test="Base Severity: low count" class="vue--severity__label">8</span></div> <abbr title="Low severity issues" class="vue--severity__text">
      <vulnicon-stub title="Vuln Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></vulnicon-stub> <span class="vue--severity__label">L</span>
    </abbr>
  </li>
  <li class="vue--severity__item vue--severity__item--none">
    <div class="vue--severity__count"><span class="vue--severity__label">0</span></div> <abbr title="Low severity license issues" class="vue--severity__text">
      <licenseicon-stub title="License Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></licenseicon-stub> <span class="vue--severity__label">L</span>
    </abbr>
  </li>
</ul>
`;

exports[`BaseSeverity renders with critical as expected 1`] = `
<ul class="vue--severity">
  <li class="vue--severity__item vue--severity__item--critical">
    <div class="vue--severity__count"><span data-snyk-test="Base Severity: critical count" class="vue--severity__label">1</span></div> <abbr title="Critical severity issues" class="vue--severity__text">
      <vulnicon-stub title="Vuln Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></vulnicon-stub> <span class="vue--severity__label">C</span>
    </abbr>
  </li>
  <li class="vue--severity__item vue--severity__item--none">
    <div class="vue--severity__count"><span class="vue--severity__label">0</span></div> <abbr title="Critical severity license issues" class="vue--severity__text">
      <licenseicon-stub title="License Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></licenseicon-stub> <span class="vue--severity__label">C</span>
    </abbr>
  </li>
  <li class="vue--severity__item vue--severity__item--high">
    <div class="vue--severity__count"><span data-snyk-test="Base Severity: high count" class="vue--severity__label">4</span></div> <abbr title="High severity issues" class="vue--severity__text">
      <vulnicon-stub title="Vuln Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></vulnicon-stub> <span class="vue--severity__label">H</span>
    </abbr>
  </li>
  <li class="vue--severity__item vue--severity__item--high">
    <div class="vue--severity__count"><span class="vue--severity__label">2</span></div> <abbr title="High severity license issues" class="vue--severity__text">
      <licenseicon-stub title="License Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></licenseicon-stub> <span class="vue--severity__label">H</span>
    </abbr>
  </li>
  <li data-snyk-ignore-wcag2aa="true" class="vue--severity__item vue--severity__item--none">
    <div class="vue--severity__count"><span data-snyk-test="Base Severity: medium count" class="vue--severity__label">0</span></div> <abbr title="Medium severity issues" class="vue--severity__text">
      <vulnicon-stub title="Vuln Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></vulnicon-stub> <span class="vue--severity__label">M</span>
    </abbr>
  </li>
  <li data-snyk-ignore-wcag2aa="true" class="vue--severity__item vue--severity__item--medium">
    <div class="vue--severity__count"><span class="vue--severity__label">1</span></div> <abbr title="Medium severity license issues" class="vue--severity__text">
      <licenseicon-stub title="License Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></licenseicon-stub> <span class="vue--severity__label">M</span>
    </abbr>
  </li>
  <li class="vue--severity__item vue--severity__item--low">
    <div class="vue--severity__count"><span data-snyk-test="Base Severity: low count" class="vue--severity__label">8</span></div> <abbr title="Low severity issues" class="vue--severity__text">
      <vulnicon-stub title="Vuln Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></vulnicon-stub> <span class="vue--severity__label">L</span>
    </abbr>
  </li>
  <li class="vue--severity__item vue--severity__item--none">
    <div class="vue--severity__count"><span class="vue--severity__label">0</span></div> <abbr title="Low severity license issues" class="vue--severity__text">
      <licenseicon-stub title="License Icon" fillcolor="currentColor" size="14" class="vue--severity__type-icon"></licenseicon-stub> <span class="vue--severity__label">L</span>
    </abbr>
  </li>
</ul>
`;
